+ clean up structure & styles of the ABALogo (fix sum issues with hover and clicking) + update MainHeader (new method of scaling the logo, use css variables) + update UserMenu (add 'secondary-item' hiding on small screens)

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -30,6 +30,8 @@ $z-high: 500;
 
 $transition-time: 0.2s;
 
+$logo-ratio: 1.85;
+
 $h1: $base-size;
 $h2: $base-size * 0.75;
 $h3: $base-size * 0.5;
